# marag

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh
configs/: example.yaml  local.toml
scripts/: batch_runner.py  browse_predictions.py  build_index.py  eval.py  pull_from_sz3.sh
src/arag/: __init__.py  utils.py
src/arag/agent/: __init__.py  base.py
src/arag/agent/prompts/: default.txt
src/arag/core/: __init__.py  config.py  context.py  factory.py  llm.py
src/arag/tools/: __init__.py  base.py  graph_utils.py  keyword_search.py  read_chunk.py  registry.py  semantic_search.py
tests/: test_batch_runner_resume.py  test_import.py
